src/test/ui/issues/issue-21946.stderr
error[E0275]: overflow evaluating the requirement `<FooStruct as Foo>::A`
  --> $DIR/issue-21946.rs:17:6
   |
LL | impl Foo for FooStruct {
   |      ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
